--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ tokio-util = {version = "0.7", default-features = false, features = ["codec"] }
 
 log = "0.4"
 env_logger = "0.10"
+
+[dev-dependencies]
+rand = "0.8"
